--- a/package.json
+++ b/package.json
@@ -42,5 +42,6 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "proxy": "http://shinhan-stock-friends-lb-252672342.ap-northeast-2.elb.amazonaws.com"
 }
